--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "1.0.4",
   "main": "./jquery.barrating",
   "devDependencies": {
-    "mocha": "*",
-    "chai": "*",
-    "jsdom": "*",
-    "jquery": "*"
+    "mocha": "1.6.0",
+    "chai": "1.3.0",
+    "jquery": "1.7.3"
   }
 }
