--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   "devDependencies": {
     "mocha": "2.2.4",
     "chai": "2.3.0",
-    "jquery": "1.7.2"
+    "jquery": "1.7.2",
+    "gulp": "3.8.11",
+    "gulp-less": "3.0.3",
+    "gulp-jshint": "1.10.0",
+    "gulp-uglify": "1.2.0",
+    "gulp-mocha": "2.0.1",
+    "gulp-rename": "1.2.2",
+    "gulp-sourcemaps": "1.5.2",
+    "run-sequence": "1.1.0"
   }
 }
