--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "description": "Minimal, light-weight jQuery ratings.",
   "version": "1.1.0",
   "main": "./jquery.barrating",
+  "keywords": [
+    "jquery",
+    "jquery-plugin",
+    "ratings",
+    "rating"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/antennaio/jquery-bar-rating.git"
   },
+  "dependencies": {
+    "jquery": ">=1.7.2"
+  },
   "devDependencies": {
     "mocha": "2.2.4",
     "chai": "2.3.0",
-    "jquery": "1.7.2",
+    "jsdom": "3.1.2",
     "gulp": "3.8.11",
     "gulp-less": "3.0.3",
     "gulp-jshint": "1.10.0",
