--- a/package.json
+++ b/package.json
@@ -17,16 +17,24 @@
     "jquery": ">=1.7.2"
   },
   "devDependencies": {
-    "mocha": "2.2.4",
     "chai": "2.3.0",
-    "jsdom": "3.1.2",
     "gulp": "3.8.11",
-    "gulp-less": "3.0.3",
     "gulp-jshint": "1.10.0",
-    "gulp-uglify": "1.2.0",
-    "gulp-mocha": "2.0.1",
+    "gulp-karma": "0.0.4",
+    "gulp-less": "3.0.3",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.5.2",
+    "gulp-uglify": "1.2.0",
+    "karma": "^0.12.36",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "mocha": "2.2.4",
+    "phantomjs": "^1.9.17",
     "run-sequence": "1.1.0"
+  },
+  "scripts": {
+    "test": "karma start"
   }
 }
