--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jquery-bar-rating",
   "description": "Minimal, light-weight jQuery ratings.",
   "version": "1.1.1",
-  "main": "./jquery.barrating",
+  "main": "jquery.barrating.js",
   "keywords": [
     "jquery",
     "jquery-plugin",
