--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Minimal, light-weight jQuery ratings.",
   "version": "1.2.0",
   "main": "jquery.barrating.js",
+  "license": "MIT",
   "keywords": [
     "jquery",
     "jquery-plugin",
@@ -17,23 +18,23 @@
     "jquery": ">=1.7.2"
   },
   "devDependencies": {
-    "chai": "2.3.0",
-    "gulp": "3.8.11",
-    "gulp-jshint": "1.10.0",
-    "gulp-karma": "0.0.4",
-    "gulp-less": "3.0.3",
+    "chai": "3.5.0",
+    "gulp": "3.9.1",
+    "gulp-jshint": "2.0.1",
+    "gulp-less": "3.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.5.2",
-    "gulp-uglify": "1.2.0",
-    "karma": "^0.12.36",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "karma-junit-reporter": "~0.2",
-    "mocha": "2.2.4",
-    "phantomjs": "^1.9.17",
-    "run-sequence": "1.1.0"
+    "gulp-uglify": "1.5.3",
+    "jshint": "2.9.2",
+    "karma": "0.13.22",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "0.2.3",
+    "karma-junit-reporter": "0.4.2",
+    "karma-mocha": "0.2.2",
+    "karma-phantomjs-launcher": "1.0.0",
+    "mocha": "2.5.3",
+    "phantomjs-prebuilt": "2.1.7",
+    "run-sequence": "1.2.1"
   },
   "scripts": {
     "test": "karma start"
